test-resources/invalid-project/src/main/java/test/group/id/PDI.java
package test.group.id;

/**
 * ⁩
 * Bidi characters above
 */
public class PDI
{
    public static void main( String[] args )
    {
        System.out.println( "Hello World!" );
    }
}
